# ISTE-WEBSITE

./: .browserslistrc  .gitignore  BUILDING_A_LIVING_ARCHITECTURE.md  INTERNSHIP_ENGINE_REPORT.md  MEMBER_PORTAL_BLUEPRINT.md  README.md  adaptive_core_v10.pth  build_engines.ps1  diff.txt  eslint.config.mjs  internship_brain_v8.db  ml_health_report.json  next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  pyrightconfig.json  requirements.txt  resume_ml_knowledge.json  sanity.config.ts  skill_embeddings_cache.json  skills-lock.json  tailwind.config.ts  test.txt  vercel.json
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts  template.tsx
docs/: identity_matrix_architecture.md
go_engine/: go.mod  main.go  run.ps1
lib/: auth.ts
playwright-report/: index.html
prisma/: schema.prisma
rust_engine/: Cargo.toml  build.ps1
rust_engine/src/: lib.rs  main.rs
scripts/: advanced_agents.py  cache_kill_test.py  check-survivors.mjs  check_internships.mjs  clean_sanity_junk.mjs  delete_all_internships.mjs  fetch_real_internships.mjs  find-broken-id.mjs  internship_agent.py  internship_engine_v10.py  internship_engine_v8.py  internship_engine_v9.py  ml_learner.py  requirements.txt  scan-all-docs.mjs  seed-sanity.mjs  skill_intelligence.py  source_registry.py
tools/: internship_sync.mjs  refactor_page.mjs
types/: next-auth.d.ts
v12_backend/: canonical_merger.py  compliance_scraper.py  docker-compose.yml  pipeline_engine.py  redis_spec.txt  sanity_sync.py  (+3 more)
(+113 files in other folders)
